# meta-ads-mcp

./: Dockerfile  README.md  pyproject.toml  server.json
meta_ads_mcp/: __init__.py
meta_ads_mcp/core/: accounts.py  ads.py  adsets.py  api.py  campaigns.py  duplication.py  openai_deep_research.py  reports.py  targeting.py
tests/: test_ad_formats_flexible.py  test_call_now_phone_number.py  test_flex_creatives.py  test_frequency_control_specs_create.py  test_get_ad_video.py  test_get_creative_details.py  test_image_crops.py  test_multi_advertiser_ads.py
